# hsbot

./: .env.dev  .gitignore  README.md  bot.py  cards.collectible.json  docker-compose.yml  go.sh  jjc_winrate.json  performance_data.json  pyproject.toml  requirements.txt
json_file/: JJCCardsSet.json  admin_qq_number.json  group.json
src/exclude_plugins/hearthstone_rank_query/: __init__.py
src/plugins/add_friend/: __init__.py
src/plugins/chat/: __init__.py
src/plugins/djwcb_tran/: __init__.py  word_dict.csv
src/plugins/group_notice/: __init__.py
src/plugins/hearthstone_cards_query/: __init__.py  admin_handle.py  ask_json.py  config.py  create_database.py  handle.py  init_database_from_json.py  models.py  pic_handle.py  query.py  read_json.py  requirements.txt  utility.py
src/plugins/hearthstone_rank_query/: __init__.py  ask_json.py
src/plugins/manual/: __init__.py
src/plugins/random_temperature/: __init__.py  temperature.py
src/plugins/sixty_seconds_paper/: __init__.py  ask_json.py
