[tool.poetry]
name = "hsbot"
version = "1.0.0"
description = "济往战队炉石传说bot"
authors = ["济往丨冰火回响"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
# 外部plugins
plugins = ["nonebot_plugin_status"]#"nonebot_plugin_fortune", 
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
